@@ -1,21 +1,30 @@
 package com.databricks.jdbc.api.impl.volume;
 
 import static com.databricks.jdbc.common.DatabricksJdbcConstants.ALLOWED_VOLUME_INGESTION_PATHS;
+import static com.databricks.jdbc.common.DatabricksJdbcConstants.ENABLE_VOLUME_OPERATIONS;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.isA;
 import static org.mockito.Mockito.when;
 
 import com.databricks.jdbc.api.impl.DatabricksSession;
 import com.databricks.jdbc.api.impl.IExecutionResult;
+import com.databricks.jdbc.api.internal.IDatabricksConnectionContext;
 import com.databricks.jdbc.api.internal.IDatabricksStatementInternal;
+import com.databricks.jdbc.common.util.VolumeUtil;
 import com.databricks.jdbc.dbclient.IDatabricksHttpClient;
 import com.databricks.jdbc.exception.DatabricksHttpException;
 import com.databricks.jdbc.exception.DatabricksSQLException;
 import com.databricks.jdbc.model.core.ResultManifest;
+import com.databricks.jdbc.model.telemetry.enums.DatabricksDriverErrorCode;
 import com.databricks.sdk.service.sql.ResultSchema;
-import java.io.*;
-import java.nio.charset.StandardCharsets;
+import java.io.ByteArrayInputStream;
+import java.io.File;
+import java.io.FileInputStream;
+import java.nio.file.Files;
 import java.util.Collections;
+import java.util.HashMap;
+import java.util.Map;
+import java.util.stream.Stream;
 import org.apache.http.StatusLine;
 import org.apache.http.client.methods.CloseableHttpResponse;
 import org.apache.http.client.methods.HttpDelete;
@@ -25,6 +34,9 @@ import org.apache.http.entity.InputStreamEntity;
 import org.apache.http.entity.StringEntity;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
@@ -42,11 +54,24 @@ public class VolumeOperationResultTest {
   @Mock DatabricksSession session;
   @Mock IExecutionResult resultHandler;
   @Mock IDatabricksStatementInternal statement;
+  @Mock IDatabricksConnectionContext context;
   private static final ResultManifest RESULT_MANIFEST =
       new ResultManifest()
           .setIsVolumeOperation(true)
           .setTotalRowCount(1L)
           .setSchema(new ResultSchema().setColumnCount(4L));
+
+  static Stream<Arguments> enableVolumeOperations() {
+    return Stream.of(
+        Arguments.of("true", true),
+        Arguments.of("1", true),
+        Arguments.of("0", false),
+        Arguments.of("True", true),
+        Arguments.of("TrUe", true),
+        Arguments.of("null", false),
+        Arguments.of("false", false),
+        Arguments.of("random_Value", false));
+  }
 
   @Test
   public void testGetResult_Get() throws Exception {
@@ -74,50 +99,41 @@ public class VolumeOperationResultTest {
     File file = new File(LOCAL_FILE_GET);
     assertTrue(file.exists());
     try (FileInputStream fis = new FileInputStream(file)) {
-      byte[] fileBytes = new byte[(int) file.length()];
-      fis.read(fileBytes);
-      String fileContent = new String(fileBytes);
+      String fileContent = new String(fis.readAllBytes());
       assertEquals("test", fileContent);
     } finally {
       assertTrue(file.delete());
     }
   }
 
-  @Test
-  public void testGetResult_InputStream_Get() throws Exception {
+  @ParameterizedTest
+  @MethodSource("enableVolumeOperations")
+  public void testGetResult_InputStream_Get(String propertyValue, boolean expected)
+      throws Exception {
     setupCommonInteractions();
+    buildClientInfoProperties(Map.of(ENABLE_VOLUME_OPERATIONS.toLowerCase(), propertyValue));
     when(resultHandler.getObject(0)).thenReturn("GET");
     when(resultHandler.getObject(1)).thenReturn(PRESIGNED_URL);
     when(resultHandler.getObject(3)).thenReturn("__input_stream__");
-    when(mockHttpClient.execute(isA(HttpGet.class))).thenReturn(httpResponse);
-    when(httpResponse.getEntity()).thenReturn(new StringEntity("test"));
-    when(httpResponse.getStatusLine()).thenReturn(mockedStatusLine);
-    when(mockedStatusLine.getStatusCode()).thenReturn(200);
-    when(statement.isAllowedInputStreamForVolumeOperation()).thenReturn(true);
+    if (expected) {
+      when(mockHttpClient.execute(isA(HttpGet.class))).thenReturn(httpResponse);
+      when(httpResponse.getEntity()).thenReturn(new StringEntity("test"));
+      when(httpResponse.getStatusLine()).thenReturn(mockedStatusLine);
+      when(mockedStatusLine.getStatusCode()).thenReturn(200);
+    }
 
+    when(statement.isAllowedInputStreamForVolumeOperation()).thenReturn(true);
     VolumeOperationResult volumeOperationResult =
         new VolumeOperationResult(
             RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
 
     assertTrue(volumeOperationResult.hasNext());
     assertEquals(-1, volumeOperationResult.getCurrentRow());
-    assertTrue(volumeOperationResult.next());
-    assertEquals(0, volumeOperationResult.getCurrentRow());
-    assertEquals("SUCCEEDED", volumeOperationResult.getObject(0));
-    assertFalse(volumeOperationResult.hasNext());
-    assertFalse(volumeOperationResult.next());
-
-    assertNotNull(volumeOperationResult.getVolumeOperationInputStream());
-    InputStream inputStream = volumeOperationResult.getVolumeOperationInputStream().getContent();
-    ByteArrayOutputStream byteArrayOutputStream = new ByteArrayOutputStream();
-    byte[] buffer = new byte[1024];
-    int length;
-    while ((length = inputStream.read(buffer)) != -1) {
-      byteArrayOutputStream.write(buffer, 0, length);
+    if (expected) {
+      assertSuccessVolumeGetOperations(volumeOperationResult);
+    } else {
+      assertFailedStreamVolumeOperations(volumeOperationResult);
     }
-    String content = new String(byteArrayOutputStream.toByteArray(), StandardCharsets.UTF_8);
-
-    assertEquals("test", content);
   }
 
   @Test
@@ -127,7 +143,9 @@ public class VolumeOperationResultTest {
     when(resultHandler.getObject(1)).thenReturn(PRESIGNED_URL);
     when(resultHandler.getObject(3)).thenReturn("__input_stream__");
     when(statement.isAllowedInputStreamForVolumeOperation())
-        .thenThrow(new DatabricksSQLException("statement closed"));
+        .thenThrow(
+            new DatabricksSQLException(
+                "statement closed", DatabricksDriverErrorCode.INVALID_STATE));
 
     VolumeOperationResult volumeOperationResult =
         new VolumeOperationResult(
@@ -156,7 +174,10 @@ public class VolumeOperationResultTest {
     when(resultHandler.getObject(2)).thenReturn(HEADERS);
     when(resultHandler.getObject(3)).thenReturn(LOCAL_FILE_GET);
     when(session.getClientInfoProperties())
-        .thenReturn(Collections.singletonMap(ALLOWED_VOLUME_INGESTION_PATHS.toLowerCase(), ""));
+        .thenReturn(Map.of(ALLOWED_VOLUME_INGESTION_PATHS.toLowerCase(), ""));
+    when(session.getConnectionContext()).thenReturn(context);
+    when(context.getVolumeOperationAllowedPaths()).thenReturn("");
+
     VolumeOperationResult volumeOperationResult =
         new VolumeOperationResult(
             RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
@@ -167,7 +188,9 @@ public class VolumeOperationResultTest {
       volumeOperationResult.next();
       fail("Should throw DatabricksSQLException");
     } catch (DatabricksSQLException e) {
-      assertEquals("Volume operation aborted: Volume ingestion paths are not set", e.getMessage());
+      assertEquals(
+          "Volume operation status : ABORTED, Error message: Volume ingestion paths are not set",
+          e.getMessage());
     }
   }
 
@@ -177,7 +200,6 @@ public class VolumeOperationResultTest {
     when(resultHandler.getObject(0)).thenReturn("GET");
     when(resultHandler.getObject(1)).thenReturn(PRESIGNED_URL);
     when(resultHandler.getObject(3)).thenReturn("localFileOther");
-
     VolumeOperationResult volumeOperationResult =
         new VolumeOperationResult(
             RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
@@ -188,7 +210,9 @@ public class VolumeOperationResultTest {
       volumeOperationResult.next();
       fail("Should throw DatabricksSQLException");
     } catch (DatabricksSQLException e) {
-      assertEquals("Volume operation aborted: Local file path is not allowed", e.getMessage());
+      assertEquals(
+          "Volume operation status : ABORTED, Error message: Local file path is not allowed",
+          e.getMessage());
     }
   }
 
@@ -198,7 +222,6 @@ public class VolumeOperationResultTest {
     when(resultHandler.getObject(0)).thenReturn("GET");
     when(resultHandler.getObject(1)).thenReturn(PRESIGNED_URL);
     when(resultHandler.getObject(3)).thenReturn("getvolfile.csv");
-
     VolumeOperationResult volumeOperationResult =
         new VolumeOperationResult(
             RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
@@ -209,7 +232,9 @@ public class VolumeOperationResultTest {
       volumeOperationResult.next();
       fail("Should throw DatabricksSQLException");
     } catch (DatabricksSQLException e) {
-      assertEquals("Volume operation aborted: Local file path is not allowed", e.getMessage());
+      assertEquals(
+          "Volume operation status : ABORTED, Error message: Local file path is not allowed",
+          e.getMessage());
     }
   }
 
@@ -219,7 +244,6 @@ public class VolumeOperationResultTest {
     when(resultHandler.getObject(0)).thenReturn("GET");
     when(resultHandler.getObject(1)).thenReturn(PRESIGNED_URL);
     when(resultHandler.getObject(3)).thenReturn("");
-
     VolumeOperationResult volumeOperationResult =
         new VolumeOperationResult(
             RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
@@ -230,7 +254,9 @@ public class VolumeOperationResultTest {
       volumeOperationResult.next();
       fail("Should throw DatabricksSQLException");
     } catch (DatabricksSQLException e) {
-      assertEquals("Volume operation aborted: Local file path is invalid", e.getMessage());
+      assertEquals(
+          "Volume operation status : ABORTED, Error message: Local file path is invalid",
+          e.getMessage());
     }
   }
 
@@ -242,9 +268,7 @@ public class VolumeOperationResultTest {
     when(resultHandler.getObject(3)).thenReturn(LOCAL_FILE_GET);
 
     File file = new File(LOCAL_FILE_GET);
-    try (BufferedWriter writer = new BufferedWriter(new FileWriter(file))) {
-      writer.write("test-put");
-    }
+    Files.writeString(file.toPath(), "test-put");
 
     VolumeOperationResult volumeOperationResult =
         new VolumeOperationResult(
@@ -256,7 +280,9 @@ public class VolumeOperationResultTest {
       volumeOperationResult.next();
       fail("Should throw DatabricksSQLException");
     } catch (DatabricksSQLException e) {
-      assertEquals("Volume operation aborted: Local file already exists", e.getMessage());
+      assertEquals(
+          "Volume operation status : ABORTED, Error message: Local file already exists",
+          e.getMessage());
     } finally {
       file.delete();
     }
@@ -279,7 +305,9 @@ public class VolumeOperationResultTest {
       volumeOperationResult.next();
       fail("Should throw DatabricksSQLException");
     } catch (DatabricksSQLException e) {
-      assertEquals("Volume operation aborted: Local file path is invalid", e.getMessage());
+      assertEquals(
+          "Volume operation status : ABORTED, Error message: Local file path is invalid",
+          e.getMessage());
     }
   }
 
@@ -303,7 +331,9 @@ public class VolumeOperationResultTest {
       volumeOperationResult.next();
       fail("Should throw DatabricksSQLException");
     } catch (DatabricksSQLException e) {
-      assertEquals("Volume operation failed: Failed to download file", e.getMessage());
+      assertEquals(
+          "Volume operation status : FAILED, Error message: Failed to download file",
+          e.getMessage());
     }
   }
 
@@ -318,9 +348,7 @@ public class VolumeOperationResultTest {
     when(mockedStatusLine.getStatusCode()).thenReturn(200);
 
     File file = new File(LOCAL_FILE_PUT);
-    try (BufferedWriter writer = new BufferedWriter(new FileWriter(file))) {
-      writer.write("test-put");
-    }
+    Files.writeString(file.toPath(), "test-put");
 
     VolumeOperationResult volumeOperationResult =
         new VolumeOperationResult(
@@ -336,15 +364,20 @@ public class VolumeOperationResultTest {
     assertTrue(file.delete());
   }
 
-  @Test
-  public void testGetResult_Put_withInputStream() throws Exception {
+  @ParameterizedTest
+  @MethodSource("enableVolumeOperations")
+  public void testGetResult_Put_withInputStream(String propertyValue, boolean expected)
+      throws Exception {
     setupCommonInteractions();
+    buildClientInfoProperties(Map.of(ENABLE_VOLUME_OPERATIONS.toLowerCase(), propertyValue));
     when(resultHandler.getObject(0)).thenReturn("PUT");
     when(resultHandler.getObject(1)).thenReturn(PRESIGNED_URL);
     when(resultHandler.getObject(3)).thenReturn("__input_stream__");
-    when(mockHttpClient.execute(isA(HttpPut.class))).thenReturn(httpResponse);
-    when(httpResponse.getStatusLine()).thenReturn(mockedStatusLine);
-    when(mockedStatusLine.getStatusCode()).thenReturn(200);
+    if (expected) {
+      when(mockHttpClient.execute(isA(HttpPut.class))).thenReturn(httpResponse);
+      when(httpResponse.getStatusLine()).thenReturn(mockedStatusLine);
+      when(mockedStatusLine.getStatusCode()).thenReturn(200);
+    }
     when(statement.isAllowedInputStreamForVolumeOperation()).thenReturn(true);
     when(statement.getInputStreamForUCVolume())
         .thenReturn(new InputStreamEntity(new ByteArrayInputStream("test-put".getBytes()), 10L));
@@ -352,19 +385,17 @@ public class VolumeOperationResultTest {
     VolumeOperationResult volumeOperationResult =
         new VolumeOperationResult(
             RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
-
-    assertTrue(volumeOperationResult.hasNext());
-    assertEquals(-1, volumeOperationResult.getCurrentRow());
-    assertTrue(volumeOperationResult.next());
-    assertEquals(0, volumeOperationResult.getCurrentRow());
-    assertEquals("SUCCEEDED", volumeOperationResult.getObject(0));
-    assertFalse(volumeOperationResult.hasNext());
-    assertFalse(volumeOperationResult.next());
+    if (expected) {
+      assertSuccessVolumePutOperations(volumeOperationResult);
+    } else {
+      assertFailedStreamVolumeOperations(volumeOperationResult);
+    }
   }
 
   @Test
   public void testGetResult_Put_withNullInputStream() throws Exception {
     setupCommonInteractions();
+    buildClientInfoProperties(Map.of(ENABLE_VOLUME_OPERATIONS.toLowerCase(), "True"));
     when(resultHandler.getObject(0)).thenReturn("PUT");
     when(resultHandler.getObject(1)).thenReturn(PRESIGNED_URL);
     when(resultHandler.getObject(3)).thenReturn("__input_stream__");
@@ -383,7 +414,8 @@ public class VolumeOperationResultTest {
       fail("Should throw DatabricksSQLException");
     } catch (DatabricksSQLException e) {
       assertEquals(
-          "Volume operation aborted: InputStream not set for PUT operation", e.getMessage());
+          "Volume operation status : ABORTED, Error message: InputStream not set for PUT operation",
+          e.getMessage());
     }
   }
 
@@ -395,7 +427,9 @@ public class VolumeOperationResultTest {
     when(resultHandler.getObject(3)).thenReturn("__input_stream__");
     when(statement.isAllowedInputStreamForVolumeOperation()).thenReturn(true);
     when(statement.getInputStreamForUCVolume())
-        .thenThrow(new DatabricksSQLException("statement closed"));
+        .thenThrow(
+            new DatabricksSQLException(
+                "statement closed", DatabricksDriverErrorCode.INVALID_STATE));
 
     VolumeOperationResult volumeOperationResult =
         new VolumeOperationResult(
@@ -423,9 +457,7 @@ public class VolumeOperationResultTest {
     when(mockedStatusLine.getStatusCode()).thenReturn(403);
 
     File file = new File(LOCAL_FILE_PUT);
-    try (BufferedWriter writer = new BufferedWriter(new FileWriter(file))) {
-      writer.write("test-put");
-    }
+    Files.writeString(file.toPath(), "test-put");
 
     VolumeOperationResult volumeOperationResult =
         new VolumeOperationResult(
@@ -438,7 +470,8 @@ public class VolumeOperationResultTest {
       fail("Should throw DatabricksSQLException");
     } catch (DatabricksSQLException e) {
       assertEquals(
-          "Volume operation failed: Failed to upload file with error code: 403", e.getMessage());
+          "Volume operation status : FAILED, Error message: Failed to upload file with error code: 403",
+          e.getMessage());
     } finally {
       file.delete();
     }
@@ -452,9 +485,7 @@ public class VolumeOperationResultTest {
     when(resultHandler.getObject(3)).thenReturn(LOCAL_FILE_PUT);
 
     File file = new File(LOCAL_FILE_PUT);
-    try (BufferedWriter writer = new BufferedWriter(new FileWriter(file))) {
-      writer.write("");
-    }
+    Files.writeString(file.toPath(), "");
 
     VolumeOperationResult volumeOperationResult =
         new VolumeOperationResult(
@@ -466,7 +497,8 @@ public class VolumeOperationResultTest {
       volumeOperationResult.next();
       fail("Should throw DatabricksSQLException");
     } catch (DatabricksSQLException e) {
-      assertEquals("Volume operation aborted: Local file is empty", e.getMessage());
+      assertEquals(
+          "Volume operation status : ABORTED, Error message: Local file is empty", e.getMessage());
     } finally {
       file.delete();
     }
@@ -490,14 +522,15 @@ public class VolumeOperationResultTest {
       fail("Should throw DatabricksSQLException");
     } catch (DatabricksSQLException e) {
       assertEquals(
-          "Volume operation aborted: Local file does not exist or is a directory", e.getMessage());
+          "Volume operation status : ABORTED, Error message: Local file does not exist or is a directory",
+          e.getMessage());
     }
   }
 
   @Test
   public void testGetResult_invalidOperationType() throws Exception {
     setupCommonInteractions();
-    when(resultHandler.getObject(0)).thenReturn("FETCH");
+    when(resultHandler.getObject(0)).thenReturn(VolumeUtil.VolumeOperationType.OTHER);
     when(resultHandler.getObject(1)).thenReturn(PRESIGNED_URL);
     when(resultHandler.getObject(3)).thenReturn(LOCAL_FILE_PUT);
 
@@ -511,7 +544,9 @@ public class VolumeOperationResultTest {
       volumeOperationResult.next();
       fail("Should throw DatabricksSQLException");
     } catch (DatabricksSQLException e) {
-      assertEquals("Volume operation aborted: Invalid operation type", e.getMessage());
+      assertEquals(
+          "Volume operation status : ABORTED, Error message: Invalid operation type",
+          e.getMessage());
     }
   }
 
@@ -519,6 +554,7 @@ public class VolumeOperationResultTest {
   public void testGetResult_Remove() throws Exception {
     setupCommonInteractions();
     when(resultHandler.getObject(0)).thenReturn("REMOVE");
+    buildClientInfoProperties(Map.of(ENABLE_VOLUME_OPERATIONS.toLowerCase(), "1"));
     when(resultHandler.getObject(1)).thenReturn(PRESIGNED_URL);
     when(resultHandler.getObject(3)).thenReturn(null);
     when(mockHttpClient.execute(isA(HttpDelete.class))).thenReturn(httpResponse);
@@ -544,16 +580,72 @@ public class VolumeOperationResultTest {
     }
   }
 
+  @ParameterizedTest
+  @MethodSource("enableVolumeOperations")
+  void testGetResult_RemoveWithoutEitherPropertySet(String propertyValue, boolean expected)
+      throws Exception {
+    // Mocks as per your original test
+    when(resultHandler.hasNext())
+        .thenReturn(true)
+        .thenReturn(true)
+        .thenReturn(false)
+        .thenReturn(false);
+    when(resultHandler.next()).thenReturn(true).thenReturn(false);
+    when(resultHandler.getObject(2)).thenReturn(HEADERS);
+    Map<String, String> clientProps = new HashMap<>();
+    clientProps.put(ENABLE_VOLUME_OPERATIONS.toLowerCase(), propertyValue);
+    when(session.getClientInfoProperties()).thenReturn(clientProps);
+    when(session.getConnectionContext()).thenReturn(context);
+    when(resultHandler.getObject(0)).thenReturn("REMOVE");
+    when(resultHandler.getObject(1)).thenReturn(PRESIGNED_URL);
+    when(resultHandler.getObject(3)).thenReturn(null);
+    if (expected) {
+      when(mockHttpClient.execute(isA(HttpDelete.class))).thenReturn(httpResponse);
+      when(httpResponse.getStatusLine()).thenReturn(mockedStatusLine);
+      when(mockedStatusLine.getStatusCode()).thenReturn(200);
+      when(context.getVolumeOperationAllowedPaths()).thenReturn(ALLOWED_PATHS);
+    }
+
+    when(session.getConnectionContext()).thenReturn(context);
+    VolumeOperationResult volumeOperationResult =
+        new VolumeOperationResult(
+            RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
+    assertTrue(volumeOperationResult.hasNext());
+    assertEquals(-1, volumeOperationResult.getCurrentRow());
+    if (expected) {
+      assertTrue(volumeOperationResult.next());
+      assertEquals(0, volumeOperationResult.getCurrentRow());
+      assertEquals("SUCCEEDED", volumeOperationResult.getObject(0));
+      assertFalse(volumeOperationResult.hasNext());
+      assertFalse(volumeOperationResult.next());
+      try {
+        volumeOperationResult.getObject(2);
+        fail("Should throw DatabricksSQLException");
+      } catch (DatabricksSQLException e) {
+        assertEquals("Invalid column access", e.getMessage());
+      }
+    } else {
+      try {
+        volumeOperationResult.next();
+        fail("Should throw DatabricksSQLException");
+      } catch (DatabricksSQLException e) {
+        assertEquals(
+            "Volume operation status : ABORTED, Error message: enableVolumeOperations property or Volume ingestion paths required for remove operation on Volume",
+            e.getMessage());
+      }
+    }
+  }
+
   @Test
   public void testGetResult_RemoveFailed() throws Exception {
     setupCommonInteractions();
     when(resultHandler.getObject(0)).thenReturn("REMOVE");
+    buildClientInfoProperties(Map.of(ENABLE_VOLUME_OPERATIONS.toLowerCase(), "1"));
     when(resultHandler.getObject(1)).thenReturn(PRESIGNED_URL);
     when(resultHandler.getObject(3)).thenReturn(null);
     when(mockHttpClient.execute(isA(HttpDelete.class))).thenReturn(httpResponse);
     when(httpResponse.getStatusLine()).thenReturn(mockedStatusLine);
     when(mockedStatusLine.getStatusCode()).thenReturn(403);
-
     VolumeOperationResult volumeOperationResult =
         new VolumeOperationResult(
             RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
@@ -565,7 +657,9 @@ public class VolumeOperationResultTest {
       volumeOperationResult.next();
       fail("Should throw DatabricksSQLException");
     } catch (DatabricksSQLException e) {
-      assertEquals("Volume operation failed: Failed to delete volume", e.getMessage());
+      assertEquals(
+          "Volume operation status : FAILED, Error message: Failed to delete volume",
+          e.getMessage());
     }
     assertDoesNotThrow(volumeOperationResult::close);
   }
@@ -574,10 +668,12 @@ public class VolumeOperationResultTest {
   public void testGetResult_RemoveFailedWithException() throws Exception {
     setupCommonInteractions();
     when(resultHandler.getObject(0)).thenReturn("REMOVE");
+    buildClientInfoProperties(Map.of(ENABLE_VOLUME_OPERATIONS.toLowerCase(), "1"));
     when(resultHandler.getObject(1)).thenReturn(PRESIGNED_URL);
     when(resultHandler.getObject(3)).thenReturn(null);
     when(mockHttpClient.execute(isA(HttpDelete.class)))
-        .thenThrow(new DatabricksHttpException("exception"));
+        .thenThrow(
+            new DatabricksHttpException("exception", DatabricksDriverErrorCode.INVALID_STATE));
 
     VolumeOperationResult volumeOperationResult =
         new VolumeOperationResult(
@@ -590,7 +686,9 @@ public class VolumeOperationResultTest {
       volumeOperationResult.next();
       fail("Should throw DatabricksSQLException");
     } catch (DatabricksSQLException e) {
-      assertEquals("Volume operation failed: Failed to delete volume: exception", e.getMessage());
+      assertEquals(
+          "Volume operation status : FAILED, Error message: Failed to delete volume: exception",
+          e.getMessage());
     }
   }
 
@@ -625,7 +723,46 @@ public class VolumeOperationResultTest {
       volumeOperationResult.next();
       fail("Should throw DatabricksSQLException");
     } catch (DatabricksSQLException e) {
-      assertEquals("Volume operation aborted: Volume operation URL is not set", e.getMessage());
+      assertEquals(
+          "Volume operation status : ABORTED, Error message: Volume operation URL is not set",
+          e.getMessage());
+    }
+  }
+
+  private void assertSuccessVolumePutOperations(VolumeOperationResult volumeOperationResult)
+      throws Exception {
+    assertTrue(volumeOperationResult.hasNext());
+    assertEquals(-1, volumeOperationResult.getCurrentRow());
+    assertTrue(volumeOperationResult.next());
+    assertEquals(0, volumeOperationResult.getCurrentRow());
+    assertEquals("SUCCEEDED", volumeOperationResult.getObject(0));
+    assertFalse(volumeOperationResult.hasNext());
+    assertFalse(volumeOperationResult.next());
+  }
+
+  private void assertSuccessVolumeGetOperations(VolumeOperationResult volumeOperationResult)
+      throws Exception {
+    assertTrue(volumeOperationResult.next());
+    assertEquals(0, volumeOperationResult.getCurrentRow());
+    assertEquals("SUCCEEDED", volumeOperationResult.getObject(0));
+    assertFalse(volumeOperationResult.hasNext());
+    assertFalse(volumeOperationResult.next());
+
+    assertNotNull(volumeOperationResult.getVolumeOperationInputStream());
+    assertEquals(
+        "test",
+        new String(
+            volumeOperationResult.getVolumeOperationInputStream().getContent().readAllBytes()));
+  }
+
+  private void assertFailedStreamVolumeOperations(VolumeOperationResult volumeOperationResult) {
+    try {
+      volumeOperationResult.next();
+      fail("Should throw DatabricksSQLException");
+    } catch (DatabricksSQLException e) {
+      assertEquals(
+          "Volume operation status : ABORTED, Error message: enableVolumeOperations property mandatory for Volume operations on stream",
+          e.getMessage());
     }
   }
 
@@ -637,8 +774,16 @@ public class VolumeOperationResultTest {
         .thenReturn(false);
     when(resultHandler.next()).thenReturn(true).thenReturn(false);
     when(resultHandler.getObject(2)).thenReturn(HEADERS);
-    when(session.getClientInfoProperties())
-        .thenReturn(
-            Collections.singletonMap(ALLOWED_VOLUME_INGESTION_PATHS.toLowerCase(), ALLOWED_PATHS));
+    buildClientInfoProperties(Collections.emptyMap());
+  }
+
+  private void buildClientInfoProperties(Map<String, String> overrides) {
+    Map<String, String> clientInfoProperties = new HashMap<>();
+    clientInfoProperties.put(ALLOWED_VOLUME_INGESTION_PATHS.toLowerCase(), ALLOWED_PATHS);
+
+    if (overrides != null) {
+      clientInfoProperties.putAll(overrides); // add or override test-specific keys
+    }
+    when(session.getClientInfoProperties()).thenReturn(clientInfoProperties);
   }
 }
